--- a/app/src/main/res/layout/fragment_setting_main.xml
+++ b/app/src/main/res/layout/fragment_setting_main.xml
@@ -20,238 +20,222 @@
 
     </data>
 
-
-    <android.support.constraint.ConstraintLayout
+    <android.support.design.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         >
 
-        <TextView
-            android:id="@+id/setting_view_titlebar"
-            style="@style/titlebarNoText"
-            android:text="유저"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            />
-
-        <View
-            android:id="@+id/view_above_profileChange"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:background="@color/white"
-            app:layout_constraintBottom_toTopOf="@id/setting_btn_changeimage"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/setting_view_titlebar"
-            />
-
-        <ImageView
-            android:id="@+id/setting_img"
-            settingImageUrl="@{item.UserProfile}"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:padding="5dp"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="25dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/setting_view_titlebar"
-
-            />
-
-
-        <TextView
-            android:id="@+id/setting_name_txt"
-            android:layout_width="0dp"
-            android:layout_height="30dp"
-            android:layout_marginEnd="20dp"
-            android:layout_marginStart="20dp"
-            android:gravity="center_vertical"
-            android:text="@{item.UserNick}"
-            android:textColor="#000"
-            android:textSize="15sp"
-
-            app:layout_constraintBottom_toTopOf="@id/setting_gender_txt"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/setting_img"
-            app:layout_constraintTop_toBottomOf="@id/setting_img"
-            app:layout_constraintVertical_chainStyle="spread_inside"
-            tools:text="SEOGKI HONG"
-            />
-
-
-        <View
-            android:layout_width="0dp"
-            android:layout_height="0.5dp"
-            android:layout_marginEnd="20dp"
-            android:layout_marginStart="20dp"
-            android:background="@color/darkGrey"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/setting_img"
-            app:layout_constraintTop_toBottomOf="@id/setting_name_txt"
-            />
-
-        <TextView
-            android:id="@+id/setting_gender_txt"
-            android:layout_width="0dp"
-            android:layout_height="40dp"
-            android:layout_marginEnd="20dp"
-            android:layout_marginStart="20dp"
-            android:gravity="center_vertical"
-            android:textColor="#000"
-            android:textSize="13sp"
-            app:checkGender="@{item.UserGender}"
-            app:layout_constraintBottom_toTopOf="@id/setting_age_txt"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/setting_img"
-            app:layout_constraintTop_toBottomOf="@id/setting_name_txt"
-            tools:text="M"
-            />
-
-        <View
-            android:layout_width="0dp"
-            android:layout_height="0.5dp"
-            android:layout_marginEnd="20dp"
-            android:layout_marginStart="20dp"
-            android:background="@color/darkGrey"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/setting_img"
-            app:layout_constraintTop_toBottomOf="@id/setting_gender_txt"
-            />
-
-        <TextView
-            android:id="@+id/setting_age_txt"
-            android:layout_width="0dp"
-            android:layout_height="40dp"
-            android:layout_marginEnd="20dp"
-            android:layout_marginStart="20dp"
-            android:gravity="center_vertical"
-            android:text="@{item.UserAge}"
-            android:textColor="#000"
-            android:textSize="13sp"
-            app:layout_constraintBottom_toTopOf="@id/setting_email_txt"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/setting_img"
-            app:layout_constraintTop_toBottomOf="@id/setting_gender_txt"
-            tools:text="23"
-            />
-
-        <View
-            android:layout_width="0dp"
-            android:layout_height="0.5dp"
-            android:layout_marginEnd="20dp"
-            android:layout_marginStart="20dp"
-            android:background="@color/darkGrey"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/setting_img"
-            app:layout_constraintTop_toBottomOf="@id/setting_age_txt"
-            />
-
-
-        <TextView
-            android:id="@+id/setting_email_txt"
-            android:layout_width="0dp"
-            android:layout_height="40dp"
-            android:layout_marginEnd="20dp"
-            android:layout_marginStart="20dp"
-            android:gravity="center_vertical"
-            android:text="@{item.UserEmail}"
-            android:textColor="#000"
-            android:textSize="13sp"
-            app:layout_constraintBottom_toTopOf="@id/setting_img"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/setting_img"
-            app:layout_constraintTop_toBottomOf="@id/setting_age_txt"
-            tools:text="seogkihong333ffwer@gmail.com"
-            />
-
-        <View
-            android:layout_width="0dp"
-            android:layout_height="0.5dp"
-            android:layout_marginEnd="20dp"
-            android:layout_marginStart="20dp"
-            android:background="@color/darkGrey"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/setting_img"
-            app:layout_constraintTop_toBottomOf="@id/setting_email_txt"
-            />
-
-        <Button
-            android:id="@+id/setting_btn_changeimage"
+        <android.support.design.widget.AppBarLayout
+            android:id="@+id/appBarLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="0.3dp"
-            android:layout_marginTop="15dp"
-            android:background="@drawable/btn_grey_rec"
-            android:gravity="center_vertical"
-            android:onClick="@{onClickListener::onClick}"
-            android:paddingStart="15dp"
-            android:text="프로필 사진 변경"
-            android:textColor="@color/black"
-            android:textSize="14sp"
-            app:layout_constraintBottom_toTopOf="@id/setting_btn_notification"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/setting_img"
-            />
+            >
+
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/main_search_toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                app:contentInsetEnd="0dp"
+                app:contentInsetLeft="0dp"
+                app:contentInsetRight="0dp"
+                app:contentInsetStart="0dp"
+                app:elevation="0dp"
+                app:layout_scrollFlags="scroll|enterAlways|snap"
+                >
 
 
-        <Button
-            android:id="@+id/setting_btn_notification"
+                <android.support.constraint.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    >
+
+                    <TextView
+                        android:id="@+id/setting_view_titlebar"
+                        style="@style/titlebarNoText"
+                        android:text="@string/setting_main_title"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        />
+
+                </android.support.constraint.ConstraintLayout>
+
+            </android.support.v7.widget.Toolbar>
+
+        </android.support.design.widget.AppBarLayout>
+
+        <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="0.3dp"
-            android:background="@drawable/btn_grey_rec"
-            android:gravity="center_vertical"
-            android:onClick="@{onClickListener::onClick}"
-            android:paddingStart="15dp"
-            android:text="공지사항"
-            android:textColor="@color/black"
-            android:textSize="14sp"
-            app:layout_constraintBottom_toTopOf="@id/setting_btn_errors"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/setting_btn_changeimage"
-            />
+            android:layout_height="match_parent"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"
+            >
 
-        <Button
-            android:id="@+id/setting_btn_errors"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="0.3dp"
-            android:background="@drawable/btn_grey_rec"
-            android:gravity="center_vertical"
-            android:onClick="@{onClickListener::onClick}"
-            android:paddingStart="15dp"
-            android:text="문의 하기"
-            android:textColor="@color/black"
-            android:textSize="14sp"
-            app:layout_constraintBottom_toTopOf="@id/setting_btn_out"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/setting_btn_notification"
-            />
+            <View
+                android:id="@+id/view_above_profileChange"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:background="@color/belowtitle"
+                app:layout_constraintBottom_toBottomOf="@id/setting_email_txt"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.0"
+                />
+
+            <ImageView
+                android:id="@+id/setting_img"
+                settingImageUrl="@{item.UserProfile}"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:layout_marginTop="15dp"
+                android:background="@drawable/btn_grey_circle_border"
+                android:padding="3dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                />
 
 
+            <TextView
+                android:id="@+id/setting_name_txt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:gravity="center"
+                android:text="@{item.UserNick}"
+                android:textColor="@color/white"
+                android:textSize="15sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/setting_img"
+                tools:text="석기당"
+                />
 
-        <Button
-            android:id="@+id/setting_btn_out"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="7.6dp"
-            android:background="@drawable/btn_grey_rec"
-            android:gravity="center_vertical"
-            android:onClick="@{onClickListener::onClick}"
-            android:paddingStart="15dp"
-            android:text="로그아웃"
-            android:textColor="#F44336"
-            android:textSize="14sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/setting_btn_errors"
-            />
+            <TextView
+                android:id="@+id/setting_gender_txt"
+                android:layout_width="wrap_content"
+                android:layout_height="0dp"
+                android:layout_marginStart="3dp"
+                android:gravity="center_vertical"
+                android:textColor="@color/white"
+                android:textSize="12sp"
 
-    </android.support.constraint.ConstraintLayout>
+                app:checkGender="@{item.UserGender}"
+                app:layout_constraintBottom_toBottomOf="@id/setting_name_txt"
+                app:layout_constraintStart_toEndOf="@id/setting_name_txt"
+                app:layout_constraintTop_toTopOf="@id/setting_name_txt"
+
+                tools:text="M"
+                />
 
 
+            <TextView
+                android:id="@+id/setting_age_txt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="5dp"
+                android:gravity="center"
+                android:text="@{item.UserAge}"
+                android:textColor="@color/white"
+                android:textSize="13sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/setting_name_txt"
+                tools:text="23세"
+                />
+
+
+            <TextView
+                android:id="@+id/setting_email_txt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center|top"
+                android:text="@{item.UserEmail}"
+                android:textColor="@color/white"
+                android:textSize="13sp"
+                android:paddingBottom="10dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/setting_age_txt"
+                tools:text="seogkihong333@gmail.com"
+                />
+
+
+            <Button
+                android:id="@+id/setting_btn_changeimage"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="0.3dp"
+                android:layout_marginTop="30dp"
+                android:background="@drawable/btn_grey_rec"
+                android:gravity="center_vertical"
+                android:onClick="@{onClickListener::onClick}"
+                android:paddingStart="15dp"
+                android:text="프로필 사진 변경"
+                android:textColor="@color/black"
+                android:textSize="14sp"
+                app:layout_constraintBottom_toTopOf="@id/setting_btn_notification"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/setting_email_txt"
+                />
+
+
+            <Button
+                android:id="@+id/setting_btn_notification"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="0.3dp"
+                android:layout_marginTop="30dp"
+                android:background="@drawable/btn_grey_rec"
+                android:gravity="center_vertical"
+                android:onClick="@{onClickListener::onClick}"
+                android:paddingStart="15dp"
+                android:text="공지사항"
+                android:textColor="@color/black"
+                android:textSize="14sp"
+                app:layout_constraintBottom_toTopOf="@id/setting_btn_errors"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/setting_btn_changeimage"
+                />
+
+            <Button
+                android:id="@+id/setting_btn_errors"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="0.3dp"
+                android:background="@drawable/btn_grey_rec"
+                android:gravity="center_vertical"
+                android:onClick="@{onClickListener::onClick}"
+                android:paddingStart="15dp"
+                android:text="문의 하기"
+                android:textColor="@color/black"
+                android:textSize="14sp"
+                app:layout_constraintBottom_toTopOf="@id/setting_btn_out"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/setting_btn_notification"
+                />
+
+            <Button
+                android:id="@+id/setting_btn_out"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="30dp"
+                android:background="@drawable/btn_grey_rec"
+                android:gravity="center_vertical"
+                android:onClick="@{onClickListener::onClick}"
+                android:paddingStart="15dp"
+                android:text="로그아웃"
+                android:textColor="#F44336"
+                android:textSize="14sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/setting_btn_errors"
+                />
+
+        </android.support.constraint.ConstraintLayout>
+    </android.support.design.widget.CoordinatorLayout>
 </layout>
