--- a/app/src/main/res/layout/item_community_horizontal.xml
+++ b/app/src/main/res/layout/item_community_horizontal.xml
@@ -20,24 +20,25 @@
     </data>
 
     <android.support.constraint.ConstraintLayout
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:layout_width="300dp"
+        android:layout_height="300dp"
         tools:ignore="UnusedAttribute"
         >
 
         <TextView
             android:id="@+id/review_main_title"
             android:layout_width="0dp"
-            android:layout_height="23dp"
-            android:layout_marginEnd="15dp"
-            android:layout_marginStart="15dp"
-            android:layout_marginTop="10dp"
-            android:gravity="center_vertical"
-            android:maxLines="1"
+            android:layout_height="0dp"
+            android:gravity="center"
+            android:layout_margin="12dp"
+            android:maxLines="2"
+            android:ellipsize="end"
+            android:padding="2dp"
+            android:background="@drawable/btn_txt_horizontal_item_round_corner"
             android:text="@{model.title}"
             android:textColor="#000"
             android:textSize="13sp"
-            app:layout_constraintBottom_toTopOf="@id/main_review_img"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -48,18 +49,14 @@
             android:id="@+id/main_review_img"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_marginBottom="15dp"
-            android:layout_marginEnd="15dp"
-            android:layout_marginStart="15dp"
-            android:layout_marginTop="5dp"
+            android:layout_margin="10dp"
             android:padding="2dp"
-            android:background="@drawable/grey_border_only"
-            android:scaleType="fitXY"
+            android:adjustViewBounds="true"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/review_main_title"
-            app:reviewImageUrl="@{model.images}"
+            app:layout_constraintTop_toTopOf="parent"
+            app:horizontalcomImageUrl="@{model.images}"
 
             tools:src="@drawable/test_10"
             />
