--- a/app/src/main/res/layout/item_setting_error.xml
+++ b/app/src/main/res/layout/item_setting_error.xml
@@ -24,12 +24,12 @@
         <TextView
             android:id="@+id/error_item_txt_tag"
             android:layout_width="wrap_content"
-            android:layout_height="30dp"
-            android:layout_marginStart="5dp"
-            android:layout_marginTop="5dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="15dp"
             android:gravity="center_vertical"
-            android:textColor="@color/black"
-            android:textSize="16.5sp"
+            android:textColor="@color/titleReverse"
+            android:textSize="14.5sp"
             app:checkTag="@{model.ErrorTab}"
             app:layout_constraintBottom_toTopOf="@id/error_item_txt_content"
             app:layout_constraintEnd_toStartOf="@id/error_item_txt_name"
@@ -40,17 +40,16 @@
 
         <TextView
             android:id="@+id/error_item_txt_name"
-            style="@style/textStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="30dp"
+            style="@style/text13Style"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
-            android:layout_marginTop="5dp"
+            android:layout_marginEnd="16dp"
             android:gravity="center_vertical"
             android:text="@{model.ErrorTitle}"
-
-            app:layout_constraintEnd_toStartOf="@id/error_item_txt_date"
             app:layout_constraintStart_toEndOf="@id/error_item_txt_tag"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="@id/error_item_txt_tag"
+            app:layout_constraintEnd_toEndOf="parent"
             tools:text="ㅇㅇㅇㅇㅇ"
 
             />
@@ -58,33 +57,32 @@
         <TextView
             android:id="@+id/error_item_txt_date"
             android:layout_width="0dp"
-            android:layout_height="30dp"
-            android:layout_marginEnd="5dp"
-            android:layout_marginStart="7dp"
+            android:layout_height="25dp"
+            android:layout_marginEnd="25dp"
+            android:layout_marginBottom="7dp"
             android:layout_marginTop="5dp"
             android:gravity="center_vertical"
             android:text="@{model.ErrorDate}"
             android:textColor="@color/darkGrey"
             android:textSize="12sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/error_item_txt_name"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/error_item_txt_content"
+            app:layout_constraintBottom_toBottomOf="parent"
             tools:text="ddddㅇㅇㅇㅇㅇ"
             />
 
         <TextView
             android:id="@+id/error_item_txt_content"
-            style="@style/textStyle"
+            style="@style/text11Style"
             android:layout_width="match_parent"
-            android:layout_height="70dp"
-            android:layout_marginBottom="10dp"
-            android:layout_marginEnd="5dp"
-            android:layout_marginStart="5dp"
-            android:layout_marginTop="10dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="16dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="5dp"
             android:ellipsize="end"
             android:maxLines="4"
             android:text="@{model.ErrorContent}"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/error_item_txt_date"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/error_item_txt_tag"
