--- a/app/src/main/res/layout/activity_community_main.xml
+++ b/app/src/main/res/layout/activity_community_main.xml
@@ -17,7 +17,7 @@
             android:layout_alignParentBottom="true"
             android:layout_alignParentStart="true"
             android:layout_alignParentEnd="true"
-            android:layout_height="40dp"
+            android:layout_height="wrap_content"
             android:layout_width="match_parent"
             />
 
