--- a/app/src/main/res/layout/fragment_setting_error.xml
+++ b/app/src/main/res/layout/fragment_setting_error.xml
@@ -59,10 +59,8 @@
                 android:id="@+id/error_radiogroup_setting"
                 android:layout_width="0dp"
                 android:layout_height="35dp"
-                android:layout_marginEnd="10dp"
-                android:layout_marginStart="10dp"
                 android:layout_marginTop="2dp"
-                android:background="@drawable/btn_whitebackground_lightgeyborder"
+                android:background="@drawable/btn_frag_setting_main_img_profile"
                 android:gravity="center"
                 android:orientation="horizontal"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -118,9 +116,8 @@
                 style="@style/textStyle"
                 android:layout_width="50dp"
                 android:layout_height="40dp"
-                android:layout_marginStart="10dp"
                 android:layout_marginTop="2dp"
-                android:background="@drawable/btn_whitebackground_lightgeyborder"
+                android:background="@drawable/btn_frag_setting_main_img_profile"
                 android:gravity="center"
                 android:text="제목"
                 app:layout_constraintStart_toStartOf="parent"
@@ -132,9 +129,8 @@
                 style="@style/textStyle"
                 android:layout_width="0dp"
                 android:layout_height="40dp"
-                android:layout_marginEnd="10dp"
                 android:layout_marginTop="2dp"
-                android:background="@drawable/btn_whitebackground_lightgeyborder"
+                android:background="@drawable/btn_frag_setting_main_img_profile"
                 android:inputType="text"
                 android:padding="4dp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -147,10 +143,8 @@
                 style="@style/textStyle"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
-                android:layout_marginEnd="10dp"
-                android:layout_marginStart="10dp"
                 android:layout_marginTop="2dp"
-                android:background="@drawable/btn_whitebackground_lightgeyborder"
+                android:background="@drawable/btn_frag_setting_main_img_profile"
                 android:gravity="center"
                 android:text="내용"
                 app:layout_constraintBottom_toTopOf="@id/error_edit_content"
@@ -164,9 +158,7 @@
                 style="@style/textStyle"
                 android:layout_width="match_parent"
                 android:layout_height="300dp"
-                android:layout_marginEnd="10dp"
-                android:layout_marginStart="10dp"
-                android:background="@drawable/btn_whitebackground_lightgeyborder"
+                android:background="@drawable/btn_frag_setting_main_img_profile"
                 android:gravity="start"
                 android:inputType="text"
                 android:padding="4dp"
@@ -183,15 +175,14 @@
                 style="@style/textStyle"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
-                android:layout_marginEnd="10dp"
-                android:layout_marginStart="10dp"
-                android:background="@drawable/btn_whitebackground_lightgeyborder"
+                android:background="@drawable/btn_frag_setting_main_img_profile"
                 android:gravity="center"
                 android:onClick="@{onClickListener::onClick}"
                 android:text="문의하기"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/error_edit_content"
+                app:layout_constraintBottom_toTopOf="@id/error_btn_register"
                 />
 
 
@@ -200,8 +191,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
-                android:layout_marginEnd="10dp"
-                android:layout_marginStart="10dp"
                 android:layout_marginTop="5dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
