--- a/app/src/main/res/layout/item_bottom_layout.xml
+++ b/app/src/main/res/layout/item_bottom_layout.xml
@@ -19,29 +19,30 @@
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="40dp"
+        android:layout_height="wrap_content"
         android:background="#fff"
         app:keyboardDetect="@{empty}"
 
         >
+
         <TextView
             android:id="@+id/bottom_layout_btn0"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:background="@drawable/btn_ripple_colored"
             android:onClick="@{onClickListener::onClick}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/bottom_layout_btn1"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:background="@drawable/btn_ripple_colored"
             >
         </TextView>
 
         <ImageView
             android:id="@+id/bottom_layout_btn0_txt"
             android:layout_width="0dp"
-            android:layout_height="20dp"
-            android:layout_marginTop="5dp"
+            android:layout_height="22dp"
+            android:layout_marginTop="8dp"
             android:src="@drawable/icons8_home_24"
             android:text="메인"
             app:layout_constraintEnd_toStartOf="@id/bottom_layout_btn1_txt"
@@ -70,12 +71,12 @@
             android:id="@+id/bottom_layout_btn1"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:background="@drawable/btn_ripple_colored"
             android:onClick="@{onClickListener::onClick}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/bottom_layout_btn2"
             app:layout_constraintStart_toEndOf="@id/bottom_layout_btn0"
             app:layout_constraintTop_toTopOf="parent"
-            android:background="@drawable/btn_ripple_colored"
             >
         </TextView>
 
@@ -83,8 +84,8 @@
         <ImageView
             android:id="@+id/bottom_layout_btn1_txt"
             android:layout_width="0dp"
-            android:layout_height="20dp"
-            android:layout_marginTop="5dp"
+            android:layout_height="22dp"
+            android:layout_marginTop="8dp"
             android:src="@drawable/icons8_home_24"
             app:layout_constraintEnd_toStartOf="@id/bottom_layout_btn2_txt"
             app:layout_constraintHorizontal_chainStyle="spread"
@@ -110,8 +111,8 @@
         <TextView
             android:id="@+id/bottom_layout_btn2"
             android:layout_width="0dp"
-            android:background="@drawable/btn_ripple_colored"
             android:layout_height="0dp"
+            android:background="@drawable/btn_ripple_colored"
             android:onClick="@{onClickListener::onClick}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/bottom_layout_btn3"
@@ -123,8 +124,8 @@
         <ImageView
             android:id="@+id/bottom_layout_btn2_txt"
             android:layout_width="0dp"
-            android:layout_height="20dp"
-            android:layout_marginTop="5dp"
+            android:layout_height="22dp"
+            android:layout_marginTop="8dp"
             android:src="@drawable/icons8_people_24"
             android:text="게시판"
             app:layout_constraintEnd_toStartOf="@id/bottom_layout_btn3_txt"
@@ -165,15 +166,15 @@
         <ImageView
             android:id="@+id/bottom_layout_btn3_txt"
             android:layout_width="0dp"
-            android:layout_height="20dp"
+            android:layout_height="22dp"
+            android:layout_marginTop="8dp"
             android:src="@drawable/icons8_user_menu_male_24"
             android:text="설정"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_chainStyle="spread"
             app:layout_constraintHorizontal_weight="1"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/bottom_layout_btn2_txt"
-            android:layout_marginTop="5dp"
+            app:layout_constraintTop_toTopOf="parent"
             />
 
         <TextView
@@ -183,7 +184,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="5dp"
             android:layout_marginTop="5dp"
-            android:text="유저"
+            android:text="@string/setting_main_title"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/bottom_layout_btn2_txt"
