--- a/app/src/main/res/layout/item_community_main.xml
+++ b/app/src/main/res/layout/item_community_main.xml
@@ -138,6 +138,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/txt_regi_title"
+            app:layout_constraintBottom_toTopOf="@id/view_above_img"
             tools:text="wrqwrqwrqwtqwetewqtewteqtewtdstdsgasdtewtqtd"
             />
 
