--- a/app/src/main/res/layout/item_review_horizontal.xml
+++ b/app/src/main/res/layout/item_review_horizontal.xml
@@ -25,41 +25,18 @@
         tools:ignore="UnusedAttribute"
         >
 
-        <TextView
-            android:id="@+id/review_main_title"
-            android:layout_width="0dp"
-            android:layout_height="23dp"
-            android:layout_marginEnd="15dp"
-            android:layout_marginStart="15dp"
-            android:layout_marginTop="10dp"
-            android:gravity="center_vertical"
-            android:maxLines="1"
-            android:text="@{model.title}"
-            android:textColor="#000"
-            android:textSize="13sp"
-            app:layout_constraintBottom_toTopOf="@id/main_review_img"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:text="텍스트다"
-            />
-
         <ImageView
             android:id="@+id/main_review_img"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_marginBottom="15dp"
-            android:layout_marginEnd="15dp"
-            android:layout_marginStart="15dp"
-            android:layout_marginTop="5dp"
+            android:layout_margin="10dp"
             android:padding="2dp"
-            android:background="@drawable/grey_border_only"
             android:scaleType="fitXY"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/review_main_title"
-            app:reviewImageUrl="@{model.images}"
+            app:layout_constraintTop_toTopOf="parent"
+            app:horizontalImageUrl="@{model.images}"
 
             tools:src="@drawable/test_10"
             />
