--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -26,8 +26,18 @@
 
     <style name="text12Style">
         <item name="android:textColor">@color/darkGrey</item>
-        <item name="android:textSize">9.5sp</item>
+        <item name="android:textSize">10sp</item>
         <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="text13Style">
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">13sp</item>
+    </style>
+
+    <style name="text11Style">
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">11sp</item>
     </style>
 
     <style name="pictureTitlebar">
@@ -35,7 +45,7 @@
         <item name="android:textColor">@color/white</item>
         <item name="android:textSize">20sp</item>
         <item name="android:textStyle">bold</item>
-        <item name="android:layout_height">60dp</item>
+        <item name="android:layout_height">50dp</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:gravity">center</item>
         <item name="android:background">@color/titleColor</item>
@@ -46,7 +56,7 @@
         <item name="android:textColor">@color/white</item>
         <item name="android:textSize">20sp</item>
         <item name="android:textStyle">bold</item>
-        <item name="android:layout_height">60dp</item>
+        <item name="android:layout_height">50dp</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:gravity">center</item>
         <item name="android:background">@color/titleColor</item>
@@ -60,6 +70,11 @@
         <item name="android:gravity">center_vertical</item>
         <item name="android:textColor">@color/darkGrey</item>
 
+    </style>
+
+    <style name="toolbar">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">50dp</item>
     </style>
 
 </resources>
